# cuba-memorys

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
rust/: Cargo.toml  README.md  deny.toml
rust/src/: constants.rs  db.rs  protocol.rs  schema.sql
rust/src/cognitive/: dual_strength.rs  fsrs.rs  hebbian.rs  mod.rs  prediction_error.rs  spreading.rs
rust/src/embeddings/: mod.rs  onnx.rs
rust/src/graph/: community.rs  mod.rs
rust/src/handlers/: alarma.rs  alma.rs  cronica.rs  eco.rs  expediente.rs  faro.rs  forget.rs  jornada.rs  mod.rs  remedio.rs  vigia.rs  zafra.rs
rust/src/search/: confidence.rs  mod.rs  rrf.rs  tfidf.rs
rust/tests/: smoke_test.rs
src/cuba_memorys/: __init__.py  __main__.py  db.py  embeddings.py  handlers.py  hebbian.py  protocol.py  schema.sql  search.py  server.py  tfidf.py
tests/: conftest.py  test_constants.py  test_db_serialization.py  test_hebbian.py  test_search.py  test_tfidf.py
