[project]
name = "cuba-memorys"
version = "1.0.0"
description = "Compressed Brain MCP: 12-tool knowledge graph with Hebbian learning, hybrid search, error memory, and anti-hallucination grounding. PostgreSQL backend."
requires-python = ">=3.11"
dependencies = ["asyncpg>=0.30.0"]
license = {text = "CC-BY-NC-4.0"}
readme = "README.md"
keywords = ["mcp", "memory", "knowledge-graph", "hebbian", "ai-agent"]

[project.scripts]
cuba-memorys = "cuba_memorys.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuba_memorys"]
