[project]
name = "cuba-memorys"
version = "1.3.0"
description = "Knowledge graph MCP with Hebbian learning, FSRS spaced repetition, RRF search fusion, PageRank, contradiction detection, and anti-hallucination grounding. PostgreSQL backend. Created by Leandro Pérez G."
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "orjson>=3.10.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.2",
    "scipy>=1.12.0",
    "rapidfuzz>=3.6.0",
    "numpy>=1.26.0",
]
license = {text = "CC-BY-NC-4.0"}
readme = "README.md"
keywords = ["mcp", "memory", "knowledge-graph", "hebbian", "ai-agent", "anti-hallucination", "pagerank"]

[project.optional-dependencies]
embeddings = [
    "onnxruntime>=1.17.0",
    "huggingface-hub>=0.20.0",
    "tokenizers>=0.15.0",
]

[project.scripts]
cuba-memorys = "cuba_memorys.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuba_memorys"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true

[[tool.mypy.overrides]]
module = ["networkx.*", "rapidfuzz.*", "scipy.*", "orjson.*", "asyncpg.*"]
ignore_missing_imports = true
